--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <header class="cabecalho">
-        <h1>Yu-Gi-Oh</h1>
+        <h1 class="titulo">Yu-Gi-Oh</h1>
     </header>
+
     <main class="slider">
         <button class="btn-seta btn-voltar">
             <img src="./src/imagens/seta.png" alt="seta voltar">
@@ -191,6 +192,9 @@
                 </div>
             </li>
         </ul>
+        <button class="btn-seta">
+            <img src="./src/imagens/seta.png" alt="seta voltar">
+        </button>
     </main>
 </body>
 
