--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <main class="slider">
-        <button class="btn-seta btn-voltar">
+        <button class="btn-seta btn-voltar" id="btn-voltar">
             <img src="./src/imagens/seta.png" alt="seta voltar">
         </button>
 
@@ -193,11 +193,13 @@
             </li>
         </ul>
 
-        <button class="btn-seta">
-            <img src="./src/imagens/seta.png" alt="seta voltar">
+        <button class="btn-seta btn-avancar" id="btn-avancar">
+            <img src="./src/imagens/seta.png" alt="seta avançar">
         </button>
         
     </main>
+
+    <script src="./src/js/index.js"></script>
 </body>
 
 </html>
